try to fix other language tests